src/main/java/ru/nsu/sdt/antlr/SchemeParser.java
// Generated from C:/Users/jetbrains/custom-projects/lisp-machine/src/main/antlr\Scheme.g4 by ANTLR 4.9.1
package ru.nsu.sdt.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SchemeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, ELSE=9, 
		ARROW=10, DEFINE=11, UNQUOTE_SPLICING=12, UNQUOTE=13, QUOTE=14, LAMBDA=15, 
		IF=16, SET=17, BEGIN=18, COND=19, AND=20, OR=21, CASE=22, LET=23, LETSTAR=24, 
		LETREC=25, DO=26, DELAY=27, QUASIQUOTE=28, NUM_2=29, NUM_8=30, NUM_10=31, 
		NUM_16=32, ELLIPSIS=33, VARIABLE=34, STRING=35, CHARACTER=36, TRUE=37, 
		FALSE=38, SPACE=39, COMMENT=40;
	public static final int
		RULE_parse = 0, RULE_commandOrDefinition = 1, RULE_definition = 2, RULE_defFormals = 3, 
		RULE_command = 4, RULE_identifier = 5, RULE_syntacticKeyword = 6, RULE_expressionKeyword = 7, 
		RULE_expression = 8, RULE_variable = 9, RULE_literal = 10, RULE_quotation = 11, 
		RULE_selfEvaluating = 12, RULE_lambdaExpression = 13, RULE_formals = 14, 
		RULE_conditional = 15, RULE_test = 16, RULE_consequent = 17, RULE_alternate = 18, 
		RULE_assignment = 19, RULE_derivedExpression = 20, RULE_condClause = 21, 
		RULE_recipient = 22, RULE_caseClause = 23, RULE_bindingSpec = 24, RULE_iterationSpec = 25, 
		RULE_init = 26, RULE_step = 27, RULE_doResult = 28, RULE_procedureCall = 29, 
		RULE_operator = 30, RULE_operand = 31, RULE_body = 32, RULE_sequence = 33, 
		RULE_datum = 34, RULE_simpleDatum = 35, RULE_compoundDatum = 36, RULE_list = 37, 
		RULE_abbreviation = 38, RULE_abbrevPrefix = 39, RULE_vector = 40, RULE_number = 41, 
		RULE_bool = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "commandOrDefinition", "definition", "defFormals", "command", 
			"identifier", "syntacticKeyword", "expressionKeyword", "expression", 
			"variable", "literal", "quotation", "selfEvaluating", "lambdaExpression", 
			"formals", "conditional", "test", "consequent", "alternate", "assignment", 
			"derivedExpression", "condClause", "recipient", "caseClause", "bindingSpec", 
			"iterationSpec", "init", "step", "doResult", "procedureCall", "operator", 
			"operand", "body", "sequence", "datum", "simpleDatum", "compoundDatum", 
			"list", "abbreviation", "abbrevPrefix", "vector", "number", "bool"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'.'", "'''", "'`'", "',@'", "','", "'#('", "'else'", 
			"'=>'", "'define'", "'unquote-splicing'", "'unquote'", "'quote'", "'lambda'", 
			"'if'", "'set!'", "'begin'", "'cond'", "'and'", "'or'", "'case'", "'let'", 
			"'let*'", "'letrec'", "'do'", "'delay'", "'quasiquote'", null, null, 
			null, null, "'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "ELSE", "ARROW", 
			"DEFINE", "UNQUOTE_SPLICING", "UNQUOTE", "QUOTE", "LAMBDA", "IF", "SET", 
			"BEGIN", "COND", "AND", "OR", "CASE", "LET", "LETSTAR", "LETREC", "DO", 
			"DELAY", "QUASIQUOTE", "NUM_2", "NUM_8", "NUM_10", "NUM_16", "ELLIPSIS", 
			"VARIABLE", "STRING", "CHARACTER", "TRUE", "FALSE", "SPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Scheme.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SchemeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SchemeParser.EOF, 0); }
		public List<CommandOrDefinitionContext> commandOrDefinition() {
			return getRuleContexts(CommandOrDefinitionContext.class);
		}
		public CommandOrDefinitionContext commandOrDefinition(int i) {
			return getRuleContext(CommandOrDefinitionContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemeVisitor ) return ((SchemeVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << NUM_2) | (1L << NUM_8) | (1L << NUM_10) | (1L << NUM_16) | (1L << ELLIPSIS) | (1L << VARIABLE) | (1L << STRING) | (1L << CHARACTER) | (1L << TRUE) | (1L << FALSE))) != 0)) {
				{
				{
				setState(86);
				commandOrDefinition();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandOrDefinitionContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public CommandOrDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commandOrDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemeVisitor ) return ((SchemeVisitor<? extends T>)visitor).visitCommandOrDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandOrDefinitionContext commandOrDefinition() throws RecognitionException {
		CommandOrDefinitionContext _localctx = new CommandOrDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_commandOrDefinition);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				definition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				command();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(SchemeParser.DEFINE, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DefFormalsContext defFormals() {
			return getRuleContext(DefFormalsContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(SchemeParser.BEGIN, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemeVisitor ) return ((SchemeVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		int _la;
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(T__0);
				setState(99);
				match(DEFINE);
				setState(111);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ELLIPSIS:
				case VARIABLE:
					{
					setState(100);
					variable();
					setState(101);
					expression();
					setState(102);
					match(T__1);
					}
					break;
				case T__0:
					{
					setState(104);
					match(T__0);
					setState(105);
					variable();
					setState(106);
					defFormals();
					setState(107);
					match(T__1);
					setState(108);
					body();
					setState(109);
					match(T__1);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(T__0);
				setState(114);
				match(BEGIN);
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(115);
					definition();
					}
					}
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(121);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefFormalsContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public DefFormalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defFormals; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemeVisitor ) return ((SchemeVisitor<? extends T>)visitor).visitDefFormals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefFormalsContext defFormals() throws RecognitionException {
		DefFormalsContext _localctx = new DefFormalsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defFormals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELLIPSIS || _la==VARIABLE) {
				{
				{
				setState(124);
				variable();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(130);
				match(T__2);
				setState(131);
				variable();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemeVisitor ) return ((SchemeVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_command);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public SyntacticKeywordContext syntacticKeyword() {
			return getRuleContext(SyntacticKeywordContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemeVisitor ) return ((SchemeVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_identifier);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ELSE:
			case ARROW:
			case DEFINE:
			case UNQUOTE_SPLICING:
			case UNQUOTE:
			case QUOTE:
			case LAMBDA:
			case IF:
			case SET:
			case BEGIN:
			case COND:
			case AND:
			case OR:
			case CASE:
			case LET:
			case LETSTAR:
			case LETREC:
			case DO:
			case DELAY:
			case QUASIQUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				syntacticKeyword();
				}
				break;
			case ELLIPSIS:
			case VARIABLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SyntacticKeywordContext extends ParserRuleContext {
		public ExpressionKeywordContext expressionKeyword() {
			return getRuleContext(ExpressionKeywordContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(SchemeParser.ELSE, 0); }
		public TerminalNode ARROW() { return getToken(SchemeParser.ARROW, 0); }
		public TerminalNode DEFINE() { return getToken(SchemeParser.DEFINE, 0); }
		public TerminalNode UNQUOTE() { return getToken(SchemeParser.UNQUOTE, 0); }
		public TerminalNode UNQUOTE_SPLICING() { return getToken(SchemeParser.UNQUOTE_SPLICING, 0); }
		public SyntacticKeywordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntacticKeyword; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemeVisitor ) return ((SchemeVisitor<? extends T>)visitor).visitSyntacticKeyword(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyntacticKeywordContext syntacticKeyword() throws RecognitionException {
		SyntacticKeywordContext _localctx = new SyntacticKeywordContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_syntacticKeyword);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUOTE:
			case LAMBDA:
			case IF:
			case SET:
			case BEGIN:
			case COND:
			case AND:
			case OR:
			case CASE:
			case LET:
			case LETSTAR:
			case LETREC:
			case DO:
			case DELAY:
			case QUASIQUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				expressionKeyword();
				}
				break;
			case ELSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(ELSE);
				}
				break;
			case ARROW:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				match(ARROW);
				}
				break;
			case DEFINE:
				enterOuterAlt(_localctx, 4);
				{
				setState(143);
				match(DEFINE);
				}
				break;
			case UNQUOTE:
				enterOuterAlt(_localctx, 5);
				{
				setState(144);
				match(UNQUOTE);
				}
				break;
			case UNQUOTE_SPLICING:
				enterOuterAlt(_localctx, 6);
				{
				setState(145);
				match(UNQUOTE_SPLICING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionKeywordContext extends ParserRuleContext {
		public TerminalNode QUOTE() { return getToken(SchemeParser.QUOTE, 0); }
		public TerminalNode LAMBDA() { return getToken(SchemeParser.LAMBDA, 0); }
		public TerminalNode IF() { return getToken(SchemeParser.IF, 0); }
		public TerminalNode SET() { return getToken(SchemeParser.SET, 0); }
		public TerminalNode BEGIN() { return getToken(SchemeParser.BEGIN, 0); }
		public TerminalNode COND() { return getToken(SchemeParser.COND, 0); }
		public TerminalNode AND() { return getToken(SchemeParser.AND, 0); }
		public TerminalNode OR() { return getToken(SchemeParser.OR, 0); }
		public TerminalNode CASE() { return getToken(SchemeParser.CASE, 0); }
		public TerminalNode LET() { return getToken(SchemeParser.LET, 0); }
		public TerminalNode LETSTAR() { return getToken(SchemeParser.LETSTAR, 0); }
		public TerminalNode LETREC() { return getToken(SchemeParser.LETREC, 0); }
		public TerminalNode DO() { return getToken(SchemeParser.DO, 0); }
		public TerminalNode DELAY() { return getToken(SchemeParser.DELAY, 0); }
		public TerminalNode QUASIQUOTE() { return getToken(SchemeParser.QUASIQUOTE, 0); }
		public ExpressionKeywordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionKeyword; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemeVisitor ) return ((SchemeVisitor<? extends T>)visitor).visitExpressionKeyword(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionKeywordContext expressionKeyword() throws RecognitionException {
		ExpressionKeywordContext _localctx = new ExpressionKeywordContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expressionKeyword);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QUOTE) | (1L << LAMBDA) | (1L << IF) | (1L << SET) | (1L << BEGIN) | (1L << COND) | (1L << AND) | (1L << OR) | (1L << CASE) | (1L << LET) | (1L << LETSTAR) | (1L << LETREC) | (1L << DO) | (1L << DELAY) | (1L << QUASIQUOTE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public LambdaExpressionContext lambdaExpression() {
			return getRuleContext(LambdaExpressionContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public DerivedExpressionContext derivedExpression() {
			return getRuleContext(DerivedExpressionContext.class,0);
		}
		public ProcedureCallContext procedureCall() {
			return getRuleContext(ProcedureCallContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SchemeVisitor ) return ((SchemeVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}
